--- a/index.html
+++ b/index.html
@@ -21,37 +21,35 @@
             width: 100%;
             height: 100%;
         }
-        /* Styles for the layer switcher control */
-        .layer-switcher {
+        /* Styles for the layer selector control */
+        .layer-selector-container {
             position: absolute;
             top: 10px;
             right: 10px;
             z-index: 1000; /* Ensure it's above the map */
             background: white;
-            padding: 5px;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.25);
-            display: flex;
-            gap: 5px;
         }
-        .layer-switcher button {
+        .layer-selector {
             background-color: #fff;
-            border: 1px solid #ccc;
+            border: none;
             color: #333;
             padding: 8px 12px;
             cursor: pointer;
             font-family: 'Inter', sans-serif;
             font-size: 14px;
-            border-radius: 5px;
-            transition: background-color 0.2s, color 0.2s;
-        }
-        .layer-switcher button.active {
-            background-color: #3498db;
-            color: white;
-            border-color: #3498db;
-        }
-        .layer-switcher button:not(.active):hover {
-            background-color: #f2f2f2;
+            border-radius: 8px;
+            /* Basic appearance reset */
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            /* Custom dropdown arrow */
+            background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23333%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22/%3E%3C/svg%3E');
+            background-repeat: no-repeat;
+            background-position: right 12px top 50%;
+            background-size: .65em auto;
+            padding-right: 35px; /* Make space for the arrow */
         }
     </style>
 </head>
@@ -60,11 +58,15 @@
     <!-- The div element where the map will be rendered -->
     <div id="map"></div>
 
-    <!-- Container for layer switching buttons -->
-    <div class="layer-switcher">
-        <button id="googleBtn" class="active">Google Maps</button>
-        <button id="osmBtn">OpenStreetMap</button>
-        <button id="oneMapBtn">OneMap</button>
+    <!-- Container for layer switching dropdown -->
+    <div class="layer-selector-container">
+       <select id="layerSelector" class="layer-selector">
+           <option value="google" selected>Google Maps</option>
+           <option value="google_road">Google Road</option>
+           <option value="google_satellite">Google Satellite</option>
+           <option value="osm">OpenStreetMap</option>
+           <option value="onemap">OneMap</option>
+       </select>
     </div>
 
     <!-- Leaflet.js JavaScript -->
@@ -81,6 +83,16 @@
 
         // Define the tile layers
         const googleLayer = L.tileLayer('https://mt0.googleapis.com/vt/lyrs=m&x={x}&y={y}&z={z}', {
+            maxZoom: 20,
+            attribution: 'Map data &copy; <a href="https://www.google.com/maps">Google</a>'
+        });
+
+        const googleRoadLayer = L.tileLayer('https://mt0.googleapis.com/vt/lyrs=r&x={x}&y={y}&z={z}', {
+            maxZoom: 20,
+            attribution: 'Map data &copy; <a href="https://www.google.com/maps">Google</a>'
+        });
+
+        const googleSatelliteLayer = L.tileLayer('https://mt0.googleapis.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
             maxZoom: 20,
             attribution: 'Map data &copy; <a href="https://www.google.com/maps">Google</a>'
         });
@@ -104,41 +116,28 @@
             .openPopup();
 
         // --- Layer Switcher Logic ---
-        const googleBtn = document.getElementById('googleBtn');
-        const osmBtn = document.getElementById('osmBtn');
-        const oneMapBtn = document.getElementById('oneMapBtn');
+        const layerSelector = document.getElementById('layerSelector');
 
-        googleBtn.addEventListener('click', () => {
-            if (!map.hasLayer(googleLayer)) {
-                map.removeLayer(osmLayer);
-                map.removeLayer(oneMapLayer);
-                map.addLayer(googleLayer);
-                googleBtn.classList.add('active');
-                osmBtn.classList.remove('active');
-                oneMapBtn.classList.remove('active');
-            }
-        });
+        const layers = {
+            google: googleLayer,
+            google_road: googleRoadLayer,
+            google_satellite: googleSatelliteLayer,
+            osm: osmLayer,
+            onemap: oneMapLayer
+        };
 
-        osmBtn.addEventListener('click', () => {
-            if (!map.hasLayer(osmLayer)) {
-                map.removeLayer(googleLayer);
-                map.removeLayer(oneMapLayer);
-                map.addLayer(osmLayer);
-                osmBtn.classList.add('active');
-                googleBtn.classList.remove('active');
-                oneMapBtn.classList.remove('active');
-            }
-        });
+        let currentLayer = googleLayer;
 
-        oneMapBtn.addEventListener('click', () => {
-            if (!map.hasLayer(oneMapLayer)) {
-                map.removeLayer(googleLayer);
-                map.removeLayer(osmLayer);
-                map.addLayer(oneMapLayer);
-                oneMapBtn.classList.add('active');
-                googleBtn.classList.remove('active');
-                osmBtn.classList.remove('active');
+        layerSelector.addEventListener('change', (event) => {
+            const selectedLayerKey = event.target.value;
+            const selectedLayer = layers[selectedLayerKey];
+
+            if (map.hasLayer(currentLayer)) {
+                map.removeLayer(currentLayer);
             }
+
+            map.addLayer(selectedLayer);
+            currentLayer = selectedLayer;
         });
     </script>
 
