--- a/index.html
+++ b/index.html
@@ -79,14 +79,26 @@
             background: transparent;
             border: none;
         }
+        /* Improved Popup Styling */
+        .leaflet-popup-content-wrapper {
+            border-radius: 8px; /* Match other controls */
+            box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+        }
+        .leaflet-popup-content {
+            margin: 14px;
+            font-size: 13px;
+        }
         .leaflet-popup-content img {
-            max-width: 280px !important;
+            width: 100%; /* Make image fill the container */
+            height: auto; /* Maintain aspect ratio */
             border-radius: 4px;
+            margin-bottom: 8px;
         }
         .leaflet-popup-content p {
-            margin: 8px 0 0 0;
+            margin: 0;
             font-size: 12px;
             color: #555;
+            line-height: 1.4;
         }
     </style>
 </head>
@@ -125,6 +137,8 @@
      crossorigin=""></script>
     <!-- Leaflet MarkerCluster JS -->
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+    <!-- JSZip for handling zipped files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script>
         // Initialize the map and set its view to a specific coordinate and zoom level.
         const map = L.map('map', {
@@ -212,7 +226,7 @@
                 cameras.forEach(camera => {
                     const { location, image, timestamp, camera_id } = camera;
                     const popupContent = `<div><img src="${image}" alt="Traffic image from camera ${camera_id}"><p><strong>Camera ID:</strong> ${camera_id}<br><strong>Updated:</strong> ${new Date(timestamp).toLocaleString()}</p></div>`;
-                    const marker = L.marker([location.latitude, location.longitude], { icon: cameraIcon }).bindPopup(popupContent);
+                    const marker = L.marker([location.latitude, location.longitude], { icon: cameraIcon }).bindPopup(popupContent, { minWidth: 280 });
                     trafficLayer.addLayer(marker);
                 });
                 
